# hyper-sketching

./: .gitignore  README.md  Welcome.py  chembert.ipynb  environment.yml  pyproject.toml  run_decision_tree.py  run_lightgbm.py  run_model_dummy.py  run_predict_all_molecules.py  run_predict_all_species.py  run_random_forest.py  run_xgboost.py  streamlit_app.py  test_streamlit.py  testing_covariate_shift.ipynb  train_model.py
pages/: 1_Data_in_LOTUS.py  2_New_data.py
prepare_data/: get_metadata_entire_taxonomy_wikidata.py  prepare_chemical_taxonomy_from_wikidata.py  prepare_graph.py  prepare_graph_mol_to_mol_similarity.py  prepare_merge_mol_to_mol_similarity.py  prepare_merge_ncbi.py  prepare_mol_to_mol_similarity_matrix.py  prepare_species.py
src/: bayesian_optimization.py  external_holdouts.py  molecules.py  predict.py  run.py  sketching.py  utils.py  wikidata.py
src/models/: lightgbm.py
