[tool.poetry]
name = "lotus-hypersketching"
version = "0.1.0"
description = ""
authors = ["Marco Visani <marco.visani@unifr.ch>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
ensmallen = { file = "ensmallen-0.8.97-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }

python = "^3.11"
grape = "^0.2.3"
obonet = "^1.0.0"
sparqlwrapper = "^2.0.0"
jupyterlab = "^4.1.2"
hyperopt = "^0.2.7"
pytest = "^8.0.1"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
polars = "^0.20.10"
streamlit = "^1.31.1"
watchdog = "^4.0.0"
setuptools = "^69.1.1"
seaborn = "^0.13.2"
jupyterlab-code-formatter = "^2.2.1"
black = "^24.2.0"
isort = "^5.13.2"
numpy = "^1.26.4"
streamlit-ketcher = "^0.0.1"
chembl-webresource-client = "^0.10.9"
transformers = "^4.38.2"
rdkit = "^2023.9.5"
tabulate = "^0.9.0"
faiss-cpu = "^1.8.0"
cache-decorator = "^2.2.0"
mypy = "^1.9.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "src"
disallow_untyped_defs = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = ['tests']
